--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
                 <div class="term-of-service">
                     <p>By signing up, you agree with our <a class="Privacy-blue" href="#">Terms of Service</a> and
-                        <a class="Privacy-blue" href="#">Privacy Policy</a>.
+                        <a class="Privacy-blue" href="#">Privacy Policy</a>
                     </p>
 
                 </div>
