--- a/index.html
+++ b/index.html
@@ -30,19 +30,34 @@
             <br>
 
             <div class="inputs-part">
-                <input class="e1" type="text" placeholder="Username">
-                <input class="e1" type="text" placeholder="Email" inputmode="email">
 
                 <div class="password-and-icon">
-                    <input id="e1" class="e1" type="password" placeholder="Password" inputmode="password">
+                    <input id="input0" class="e1" type="text" name="text" value="">
+                    <label for="input" class="password-label">Username</label>
+                </div>
+
+
+                <div class="password-and-icon">
+                    <input id="input1" class="e1" type="email" name="email" value="">
+                    <label for="input" class="password-label">Email</label>
+                </div>
+
+
+                <div class="password-and-icon">
+                    <input id="input2" class="e1" type="password" pattern="^[a-zA-Z0-9]{8,}$" name="password" value="">
+                    <label for="input" class="password-label">Password</label>
                     <img class="eye-hide-icon" src="asset/icons/eye-hide.svg" alt="eye-hide">
                 </div>
 
+
                 <div class="password-and-icon">
-                    <input id="e1" class="e1" type="password" placeholder="Password Confirmation" inputmode="password">
+                    <input id="input3" id="password-confirmation" class="e1" type="password" pattern="^[a-zA-Z0-9]{8,}$"
+                        name="password" value="">
+                    <label id="password-label-confirmation" for="input" class="password-label">Password
+                        Confirmation</label>
                     <img class="eye-hide-icon" src="asset/icons/eye-hide.svg" alt="eye-hide">
                 </div>
-
+                <div class="error-message">Error Message</div>
 
 
                 <button class="button">Create</button>
@@ -51,7 +66,7 @@
 
                 <div class="term-of-service">
                     <p>By signing up, you agree with our <a class="Privacy-blue" href="#">Terms of Service</a> and
-                        <a class="Privacy-blue" href="#">Privacy Policy</a>
+                        <a class="Privacy-blue" href="#">Privacy Policy</a>.
                     </p>
 
                 </div>
@@ -68,7 +83,7 @@
         </div>
 
     </div>
-
+    <script src="script.js"></script>
 </body>
 
 </html>
