--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- google font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <!-- main css  -->
     <link rel="stylesheet" href="style.css">
     <title>Password Manager</title>
@@ -66,7 +72,7 @@
 
                 <div class="term-of-service">
                     <p>By signing up, you agree with our <a class="Privacy-blue" href="#">Terms of Service</a> and
-                        <a class="Privacy-blue" href="#">Privacy Policy</a>.
+                        <a class="Privacy-blue" href="#">Privacy Policy</a>
                     </p>
 
                 </div>
