--- a/index.html
+++ b/index.html
@@ -4,12 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- google font  -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-        rel="stylesheet">
     <!-- main css  -->
     <link rel="stylesheet" href="style.css">
     <title>Password Manager</title>
@@ -29,7 +23,7 @@
 
                 <div class="login">
                     <p>Already have an account?</p>
-                    <a href="#">Login</a>
+                    <a class="link" href="#">Login</a>
                 </div>
             </div>
 
@@ -38,19 +32,20 @@
             <div class="inputs-part">
 
                 <div class="password-and-icon">
-                    <input id="input0" class="e1" type="text" name="text" value="">
+                    <input id="input0" class="e1" type="text" name="text" value="" autocomplete="off">
                     <label for="input" class="password-label">Username</label>
                 </div>
 
 
                 <div class="password-and-icon">
-                    <input id="input1" class="e1" type="email" name="email" value="">
+                    <input id="input1" class="e1" type="email" name="email" value="" autocomplete="off">
                     <label for="input" class="password-label">Email</label>
                 </div>
 
 
                 <div class="password-and-icon">
-                    <input id="input2" class="e1" type="password" pattern="^[a-zA-Z0-9]{8,}$" name="password" value="">
+                    <input id="input2" class="e1" type="password" pattern="^[a-zA-Z0-9]{8,}$" name="password" value=""
+                        autocomplete="off">
                     <label for="input" class="password-label">Password</label>
                     <img class="eye-hide-icon" src="asset/icons/eye-hide.svg" alt="eye-hide">
                 </div>
@@ -58,7 +53,7 @@
 
                 <div class="password-and-icon">
                     <input id="input3" id="password-confirmation" class="e1" type="password" pattern="^[a-zA-Z0-9]{8,}$"
-                        name="password" value="">
+                        name="password" value="" autocomplete="off">
                     <label id="password-label-confirmation" for="input" class="password-label">Password
                         Confirmation</label>
                     <img class="eye-hide-icon" src="asset/icons/eye-hide.svg" alt="eye-hide">
@@ -71,8 +66,8 @@
 
 
                 <div class="term-of-service">
-                    <p>By signing up, you agree with our <a class="Privacy-blue" href="#">Terms of Service</a> and
-                        <a class="Privacy-blue" href="#">Privacy Policy</a>
+                    <p>By signing up, you agree with our <a class="link" href="#">Terms of Service</a> and
+                        <a class="link" href="#">Privacy Policy</a>
                     </p>
 
                 </div>
