html deleted writed with javascript

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- main css  -->
+        
     <link rel="stylesheet" href="style.css">
     <title>Password Manager</title>
 </head>
@@ -13,7 +13,6 @@
 
     <div class="container">
 
-        <!-- childe 1 -->
         <div class="sign-up">
 
             <a href="#"><img class="brand-logo-design" src="asset/logo/logo-typography.svg" alt="brand-logo"></a>
@@ -82,7 +81,6 @@
 
 
 
-        <!-- childe 2 -->
         <div class="sign-up-image">
             <img src="asset/vectors/welcome.svg" alt="vector">
         </div>
@@ -91,4 +89,4 @@
     <script src="script.js"></script>
 </body>
 
-</html>
+</html> -->
