--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -11,7 +11,7 @@
 
 <body>
 
-    <div class="container">
+  <!--  <div class="container">
 
         <div class="sign-up">
 
@@ -77,7 +77,7 @@
 
 
 
-        </div>
+        </div> -->
 
 
 
@@ -89,4 +89,4 @@
     <script src="script.js"></script>
 </body>
 
-</html> -->
+</html> 
