--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -11,7 +11,7 @@
 
 <body>
 
-    <div class="container">
+   <!-- <div class="container">
 
         <div class="sign-up">
 
@@ -83,10 +83,9 @@
 
         <div class="sign-up-image">
             <img src="asset/vectors/welcome.svg" alt="vector">
-        </div>
-
+        </div> -->
     </div>
     <script src="script.js"></script>
 </body>
 
-</html> -->
+</html> 
