--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
+
     <link rel="stylesheet" href="style.css">
     <title>Password Manager</title>
 </head>
 
 <body>
 
-   <!-- <div class="container">
+    <div class="container">
 
         <div class="sign-up">
 
@@ -83,9 +83,9 @@
 
         <div class="sign-up-image">
             <img src="asset/vectors/welcome.svg" alt="vector">
-        </div> -->
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
 
-</html> 
+</html>
