--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
     <div id="container" class="container"></div>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 
 </html>
